--- a/admin/themes/tm3/scss/responsive.scss
+++ b/admin/themes/tm3/scss/responsive.scss
@@ -29,9 +29,9 @@
 
 @media screen and (max-width: 600px) {
 
-  .container {
-    padding: 0 10px;
-  }
+  // .container {
+  //   padding: 0 10px;
+  // }
 
   #statamic-logo {display: none;}
   #status-bar {padding-left: 10px;}
