--- a/_themes/tm3/layouts/default.html
+++ b/_themes/tm3/layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" dir="ltr" id="{{ page_id }}" lang="en">
+<html class="no-js{{ if theme }} {{ theme }}{{ endif }}" dir="ltr" id="{{ page_id }}" lang="en">
     <head>
         <!-- Styles -->
         {{ theme:css tag="true" }}
