--- a/_themes/tm3/partials/header.html
+++ b/_themes/tm3/partials/header.html
@@ -2,7 +2,7 @@
     <nav role="navigation">
         <a href="#menu" id="menu-toggle"></a>
         <h1 id="logo">
-            <a href="index.html">{{ _site_name }}</a>
+            <a href="/">{{ _site_name }}</a>
         </h1>
 
         {{ theme:partial src="menu" }}
