--- a/_themes/tm3/partials/performances.html
+++ b/_themes/tm3/partials/performances.html
@@ -2,7 +2,7 @@
     <div id="map-canvas"></div>
 
     <ol class="no-bullets scrollable" id="performance-list">
-        {{ entries:listing folder="performances" limit="{upcoming_performances_total}" show_hidden="true" show_future="true" since="Today" until="December 31, 2014" sort_by="datestamp" sort_dir="asc" }}
+        {{ entries:listing folder="performances" limit="{limit}" show_hidden="true" show_future="true" since="{since}" until="{until}" sort_by="datestamp" sort_dir="asc" }}
         <li>{{ theme:partial src="performance" use_context="true" }}</li>
         {{ /entries:listing }}
     </ol>
