--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -10,7 +10,7 @@
             {{ /entries:listing }}
 
             <div class="grid-pad text-center">
-                <a class="button small" href="recordings/">All Recordings</a>
+                <a class="button small" href="/recordings">All Recordings</a>
             </div>
         </div>
         <div class="col-1-3 aside">
@@ -18,7 +18,7 @@
                 {{ theme:partial src="article" }}
 
                 <div class="grid-pad text-center">
-                    <a class="button light x-small" href="news.html">Full Article</a>
+                    <a class="button light x-small" href="/news">Full Article</a>
                 </div>
             </div>
         </div>
@@ -27,10 +27,10 @@
     <div class="grid-pad">
         <h2 class="style-1">Upcoming Performances</h2>
 
-        {{ theme:partial src="performances" use_context="true" }}
+        {{ theme:partial src="performances" limit="{upcoming_performances_total}" since="Today" until="December 31, 2014" }}
 
         <div class="grid-pad text-center">
-            <a class="button small" href="performances/">All Performances</a>
+            <a class="button small" href="/performances">All Performances</a>
         </div>
     </div>
 </section>
