--- a/_themes/tm3/partials/article.html
+++ b/_themes/tm3/partials/article.html
@@ -2,6 +2,9 @@
     <h3><a class="link" href="{{ url }}">{{ title }}</a></h3>
 
     <time class="dt-start" datetime="{{ datestamp format="{{ global_datetime_format }}" }}">{{ datestamp|relative }}</time>
-
+    {{ if truncate }}
+    {{ content|widont|truncate:350 }}
+    {{ else }}
     {{ content|widont }}
+    {{ endif }}
 </article>
