--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -16,7 +16,7 @@
         <div class="col-1-3 aside">
             <div class="grid-pad">
                 {{ entries:listing folder="news" limit="1" sort_by="datestamp" sort_dir="desc" }}
-                {{ theme:partial src="article" use_context="true" }}
+                {{ theme:partial src="article" truncate="true" use_context="true" }}
                 {{ /entries:listing }}
 
                 <div class="grid-pad text-center">
