Fixed an issue with display: block being applied to a p-description for events.

--- a/_themes/tm3/css/map.css
+++ b/_themes/tm3/css/map.css
@@ -2,8 +2,7 @@
 
 @media (min-width: 768px)
 {
-    .gm-style-iw .h-event .p-summary,
-    .gm-style-iw .h-event .p-description
+    .gm-style-iw .h-event .p-summary
     {
         display: block;
     }
