--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -22,7 +22,7 @@
                 {{ if datestamp }}
                 <tr>
                     <th>Release Date</th>
-                    <td>{{ datestamp format="{{ global_date_format }}" }}</td>
+                    <td>{{ datestamp format="{{ _date_format }}" }}</td>
                 </tr>
                 {{ endif }}
                 {{ if catalog_number }}
