Removed OGG buttons on Recordings page. Will go out with just MP3 support for launch.

--- a/_themes/tm3/templates/recordings.html
+++ b/_themes/tm3/templates/recordings.html
@@ -25,8 +25,7 @@
                             <h4>{{ title }}</h4>
                             <h5>{{ composer }}</h5>
 
-                            <a class="sample button x-small pad" href="{{ sample }}">Play Sample (MP3)</a>
-                            <a class="sample button x-small pad" href="{{ sample }}">Play Sample (OGG)</a>
+                            <a class="sample button x-small pad" href="{{ sample }}">Play Sample</a>
                         </li>
                         {{ /entries:listing }}
                     </ul>
