--- a/_themes/tm3/layouts/default.html
+++ b/_themes/tm3/layouts/default.html
@@ -17,8 +17,8 @@
         <title>{{ _site_name }}{{ if segment_1 }} – {{ title }}{{ endif }}</title>
     </head>
     <body>
-        {{ if is_production}}
-        {{ theme:partial scr="google-analytics" }}
+        {{ if enable_analytics }}
+        {{ theme:partial src="google-analytics" }}
         {{ endif}}
 
         {{ theme:partial src="header" }}
