--- a/_themes/tm3/layouts/default.html
+++ b/_themes/tm3/layouts/default.html
@@ -17,6 +17,8 @@
         <title>{{ _site_name }}{{ if segment_1 }} – {{ title }}{{ endif }}</title>
     </head>
     <body>
+        {{ if is_dev}}DEV{{ endif }}
+        {{ if is_live }}LIVE{{ endif }}
         {{ if enable_analytics }}
         {{ theme:partial src="google-analytics" }}
         {{ endif}}
