Added environment variable to default layout for testing.

--- a/_themes/tm3/layouts/default.html
+++ b/_themes/tm3/layouts/default.html
@@ -17,6 +17,7 @@
         <title>{{ _site_name }}{{ if segment_1 }} – {{ title }}{{ endif }}</title>
     </head>
     <body>
+        {{ environment }}
         {{ if is_dev}}DEV{{ endif }}
         {{ if is_live }}LIVE{{ endif }}
         {{ if enable_analytics }}
