--- a/_themes/tm3/css/utilities.css
+++ b/_themes/tm3/css/utilities.css
@@ -2,7 +2,7 @@
 .center { margin: 0 auto; }
 .col-1-8, .col-1-4, .col-1-3, .col-1-2, .col-2-3, .col-3-4 { width: 100%; }
 .display-none { display: none !important; }
-.fadein { opacity: 1 !important; }
+.js .fadein { opacity: 1; }
 .grid, .grid-pad { position: relative; }
 .grid-pad { padding: 20px; }
 .grid-pad > [class*='col-']:last-of-type { padding-right: 20px; }
