--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -36,7 +36,7 @@ html
 a { text-decoration: none; }
 h1, h2, h3, h4, h5, h6 { line-height: 1.5; margin: 0 0 0.5rem 0; }
 h1 { font-size: 2.15rem; }
-h2 { font-size: 2rem; }
+h2 { font-size: 1.9rem; }
 h3 { font-size: 1.78rem; }
 h4 { font-size: 1.6rem; }
 h5 { font-size: 1.4rem; font-weight: 400; }
@@ -63,11 +63,32 @@ strong { font-weight: 700; }
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     font-weight: 400;
     letter-spacing: 0.25rem;
-    margin-bottom: 20px;
-    margin-left: -20px;
-    margin-right: -20px;
-    padding: 0 20px 10px 20px;
+    margin-bottom: 30px;
+    margin-left: -30px;
+    margin-right: -30px;
+    padding: 0 30px 10px 30px;
     text-transform: uppercase;
+}
+
+.vcard
+{
+    margin: 30px 0 0 0;
+    padding: 0;
+}
+
+.vcard dt,
+.vcard dd
+{
+    margin: 0;
+    padding: 0;
+}
+
+.vcard .email
+{
+    font-weight: 700;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
 }
 
 @media (min-width: 768px)
