--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<article class="grid" id="{{ slug }}">
     <div class="col-1-3">
         {{ if recording_url }}<a href="{{ recording_url }}" title="{{ publisher_title }}">{{ endif }}
         <img alt="{{ title }}" src="{{ artwork }}">
@@ -47,4 +47,4 @@
         </div>
         {{ endif }}
     </div>
-</div>
+</article>
