--- a/_themes/tm3/templates/news.html
+++ b/_themes/tm3/templates/news.html
@@ -1,4 +1,4 @@
-{{ theme:partial src="hero" use_context="true" }}
+{{ theme:partial short="true" src="hero" use_context="true" }}
 
 <main id="content" role="main">
     <div class="grid-pad">
