Fixed some article photos.

--- a/_themes/tm3/templates/article.html
+++ b/_themes/tm3/templates/article.html
@@ -1,4 +1,4 @@
-{{ theme:partial src="hero" use_context="true" }}
+{{ theme:partial src="hero" short="true" use_context="true" }}
 
 <main id="content" role="main">
     <div class="grid-pad">
