--- a/_themes/tm3/css/utilities.css
+++ b/_themes/tm3/css/utilities.css
@@ -1,6 +1,6 @@
 *, *::before, *::after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 .center { margin: 0 auto; }
-.col-1-8, .col-1-4, .col-1-3, .col-1-2, .col-2-3, .col-3-4 { width: 100%; }
+.col-1-1, .col-1-2, .col-1-3, .col-1-4, .col-1-5, .col-1-6, .col-1-7, .col-1-8, .col-3-8, .col-5-6, .col-6-7, .col-2-3, .col-3-4 { width: 100%; }
 .display-none { display: none !important; }
 .js .fadein { opacity: 1; }
 .grid, .grid-pad { position: relative; }
@@ -51,6 +51,9 @@
 
     .grid-pad > [class*='col-']:last-of-type { padding-right: 30px; }
     .col-1-8 { width: 12.5%; }
+    .col-1-7 { width: 14.28571429%; }
+    .col-1-6 { width: 16.66666667%; }
+    .col-1-5 { width: 20%; }
     .col-1-4 { width: 25%; }
     .col-1-3 { width: 33.33%; }
     .col-1-2 { width: 50%; }
