--- a/_themes/tm3/css/utilities.css
+++ b/_themes/tm3/css/utilities.css
@@ -49,7 +49,8 @@
         position: relative;
     }
 
-    .grid-pad > [class*='col-']:last-of-type { padding-right: 30px; }
+    [class*='col-']:last-of-type { padding-right: 0; }
+
     .col-1-8 { width: 12.5%; }
     .col-1-7 { width: 14.28571429%; }
     .col-1-6 { width: 16.66666667%; }
