--- a/_themes/tm3/css/tm3.css
+++ b/_themes/tm3/css/tm3.css
@@ -7,7 +7,7 @@
 @import url('menu.css');
 @import url('quotes.css');
 @import url('tables.css');
-@import url('themes-dark.css');
+@import url('themes.css');
 @import url('transitions.css');
 @import url('typography.css');
 @import url('utilities.css');
