More layout tweaks on Adams and Press quotes.

--- a/_themes/tm3/templates/press.html
+++ b/_themes/tm3/templates/press.html
@@ -4,7 +4,7 @@
     <div class="grid-pad">
         <h2 class="style-1">{{ critics_title }}</h2>
 
-        <div class="grid-pad quotes">
+        <div class="grid quotes">
             {{ entries:listing conditions="adams_press:!1" folder="quotes" show_hidden="true" sort_by="random" }}
                 <div class="col-1-2">
                     <div class="grid-pad">
