--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -18,19 +18,32 @@
 
 @media (min-width: 768px)
 {
-    .js .hero
+    .hero
     {
-        height: 100%;
-        margin: 0;
-        position: relative;
-        top: 0;
-        width: 100%;
+        margin: 0 30px 0 0;
+        min-height: 0;
     }
 
-    .js #location-2
+    .col-1-2,
+    .grid,
+    .hero
     {
-    /*    left: auto;
-        right: 0;*/
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .col-1-2:last-child
+    {
+        left: auto;
+        right: 0;
+    }
+
+    .col-1-2:last-child .hero
+    {
+        margin: 0;
     }
 
     .js .card
