--- a/_themes/tm3/partials/mailing-list.html
+++ b/_themes/tm3/partials/mailing-list.html
@@ -1,12 +1,25 @@
-<form>
-    <fieldset>
-        <legend class="light">Join Timothy McAllister's Mailing List</legend>
-        <div class="grid">
-            <div class="col-7-8">
-                <input class="light" name="email-address-text-field" placeholder="Email Address" type="text">
+<!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+    <form action="//timothymcallister.us8.list-manage.com/subscribe/post?u=d95bae62a62ef2d6a5f429341&amp;id=fb70f90391" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <fieldset>
+            <legend class="light">Join Timothy McAllister's Mailing List</legend>
+            <div class="grid">
+                <div class="col-full mc-field-group">
+                    <input class="required email expand light" id="mce-EMAIL" name="EMAIL" placeholder="Email Address" type="email" value="">
+                </div>
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;">
+                    <input type="text" name="b_d95bae62a62ef2d6a5f429341_fb70f90391" tabindex="-1" value="">
+                </div>
+                <div class="col-full">
+                    <input class="button light expand x-small" name="subscribe" id="mc-embedded-subscribe" type="submit" value="Subscribe">
+                </div>
             </div>
-            <div class="col-1-8">
-                <input class="button light x-small" name="mail-list-submit-button" type="submit" value="Send">
-            </div>
-    </fieldset>
-</form>
+        </fieldset>
+    </form>
+</div>
+<!--End mc_embed_signup-->
