--- a/_themes/tm3/css/forms.css
+++ b/_themes/tm3/css/forms.css
@@ -1,10 +1,11 @@
 fieldset { border: 0; }
-
 form { margin: 20px 0; }
+input[type] { height: 41px; }
 
-input[type=text],
+input[type],
 textarea
 {
+    border: 0;
     border-radius: 0;
     color: #fff;
     font-size: 13px;
@@ -12,16 +13,10 @@ textarea
     overflow: auto;
     padding: 5px 5px;
     resize: none;
-    width: 100%;
     -webkit-appearance: none;
 }
 
-input[type=text]
-{
-    height: 41px;
-}
-
-input[type=text]:focus,
+input[type]:focus,
 textarea:focus
 {
     background-color: #fff !important;
@@ -45,7 +40,6 @@ legend
         margin: 0 auto;
         position: relative;
         top: 20px;
-        /*width: 50%;*/
     }
 
     legend { font-size: 12px; }
