--- a/_themes/tm3/css/utilities.css
+++ b/_themes/tm3/css/utilities.css
@@ -1,8 +1,10 @@
 *, *::before, *::after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 .center { margin: 0 auto; }
-.col-1-1, .col-1-2, .col-1-3, .col-1-4, .col-1-5, .col-1-6, .col-1-7, .col-1-8, .col-3-8, .col-5-6, .col-6-7, .col-2-3, .col-3-4 { width: 100%; }
+.col-full, .col-1-1, .col-1-2, .col-1-3, .col-1-4, .col-1-5, .col-1-6, .col-1-7, .col-1-8, .col-3-8, .col-5-6, .col-6-7, .col-2-3, .col-3-4 { width: 100%; }
 .display-none { display: none !important; }
+.expand { display: block; width: 100%; }
 .js .fadein, .js .hero .quote.fadein { opacity: 1; }
+.fixed { bottom: 0; left: 0; position: fixed; right: 0; top: 0; }
 .grid, .grid-pad { position: relative; }
 .grid-pad { padding: 30px; }
 .aside .grid-pad { padding: 15px; }
@@ -50,8 +52,6 @@
         position: relative;
     }
 
-    [class*='col-']:last-of-type { padding-right: 0; }
-
     .col-1-8 { width: 12.5%; }
     .col-1-7 { width: 14.28571429%; }
     .col-1-6 { width: 16.66666667%; }
@@ -62,4 +62,5 @@
     .col-2-3 { width: 66.66%; }
     .col-3-4 { width: 75%; }
     .col-7-8 { width: 87.5%; }
+    .col-full { padding-right: 0; width: 100%; }
 }
