--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -10,16 +10,16 @@
         <div class="col-1-3">
             <form>
                 <div class="grid">
-                    <div>
-                        <input class="light" name="name-text-field" placeholder="Name" type="text">
+                    <div class="col-full">
+                        <input class="expand light" name="name-text-field" placeholder="Name" type="text">
                     </div>
-                    <div>
-                        <input class="light" name="email-text-field" placeholder="Email" type="text">
+                    <div class="col-full">
+                        <input class="expand light" name="email-text-field" placeholder="Email" type="text">
                     </div>
-                    <div>
-                        <textarea class="light" cols="40" name="message-text-field" placeholder="Message" rows="5"></textarea>
+                    <div class="col-full">
+                        <textarea class="expand light" cols="40" name="message-text-field" placeholder="Message" rows="5"></textarea>
                     </div>
-                    <div>
+                    <div class="col-full">
                         <input class="button expand light x-small" name="mail-list-submit-button" type="submit" value="Send Message">
                     </div>
                 </div>
