Updated design of Contact page. Added contact.yaml fieldset.

--- a/_themes/tm3/css/forms.css
+++ b/_themes/tm3/css/forms.css
@@ -1,5 +1,7 @@
-fieldset { border: 0; }
+fieldset { border: 0; padding: 0; }
+
 form { margin: 20px 0; }
+
 input[type] { height: 41px; }
 
 input[type],
