--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -1,8 +1,3 @@
-#mailing-list-form
-{
-    margin: 60px 0;
-}
-
 .hero
 {
     background-position: top center;
@@ -24,6 +19,7 @@
 {
     #mailing-list-form
     {
+        padding-top: 90px;
         position: fixed;
         right: 0;
         width: 35%;
