--- a/_themes/tm3/templates/contact.html
+++ b/_themes/tm3/templates/contact.html
@@ -5,8 +5,9 @@
             {{ theme:partial src="contact" use_context="true" }}
             {{ /entries:listing }}
         </div>
-        <div class="col-1-3" style="position:absolute; right: 0; top: 0; bottom: 0;">
-            <div id="mailing-list-form">
+        <div class="col-1-3">
+            <div class="grid-pad" id="mailing-list-form">
+                {{ content|widont }}
                 {{ theme:partial src="mailing-list" }}
             </div>
         </div>
