--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -8,22 +8,7 @@
             {{ theme:partial src="vcard" use_context="true" }}
         </div>
         <div class="col-1-3">
-            <form>
-                <div class="grid">
-                    <div class="col-full">
-                        <input class="expand light" name="name-text-field" placeholder="Name" type="text">
-                    </div>
-                    <div class="col-full">
-                        <input class="expand light" name="email-text-field" placeholder="Email" type="text">
-                    </div>
-                    <div class="col-full">
-                        <textarea class="expand light" cols="40" name="message-text-field" placeholder="Message" rows="5"></textarea>
-                    </div>
-                    <div class="col-full">
-                        <input class="button expand light x-small" name="mail-list-submit-button" type="submit" value="Send Message">
-                    </div>
-                </div>
-            </form>
+            {{ theme:partial src="adams-contact-form" }}
         </div>
     </div>
     {{ /if }}
