Added AJAX form submission. Fixed text resize issue on Recordings page.

--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -17,7 +17,7 @@
 
 @media (min-width: 1024px)
 {
-    #mailing-list-form
+    #mailing-list-form-wrapper
     {
         padding-top: 90px;
         position: fixed;
