--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -8,7 +8,7 @@
             {{ theme:partial src="vcard" use_context="true" }}
         </div>
         <div class="col-1-3">
-            {{ theme:partial src="adams-contact-form" }}
+            {{ theme:partial src="message-form" }}
         </div>
     </div>
     {{ /if }}
