--- a/_themes/tm3/css/forms.css
+++ b/_themes/tm3/css/forms.css
@@ -9,7 +9,6 @@ textarea
 {
     border: 0;
     border-radius: 0;
-    color: #fff;
     font-size: 13px;
     margin-bottom: 10px;
     overflow: auto;
@@ -22,7 +21,7 @@ input[type]:focus,
 textarea:focus
 {
     background-color: #fff !important;
-    color: #222;
+    color: #222 !important;
     outline: none;
 }
 
@@ -33,6 +32,26 @@ legend
     text-align: left;
     text-transform: uppercase;
     width: 100%;
+}
+
+.form-errors
+{
+    background-color: #b0120a;
+    color: #fff;
+    font-size: 1rem;
+    list-style: none;
+    margin: 0 0 20px 0;
+    padding: 10px;
+}
+
+.submission-confirmation
+{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    font-size: 1rem;
+    padding: 10px 20px;
+    letter-spacing: 0.125rem;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 @media (min-width: 768px)
