--- a/_themes/tm3/templates/contact.html
+++ b/_themes/tm3/templates/contact.html
@@ -6,9 +6,9 @@
             {{ /entries:listing }}
         </div>
         <div class="col-1-3">
-            <div class="grid-pad" id="mailing-list-form">
-                {{ content|widont }}
-                {{ theme:partial src="mailing-list" }}
+            <div class="grid-pad" id="mailing-list-form-wrapper">
+                {{ content|markdown }}
+                {{ theme:partial src="mailing-list-form" }}
             </div>
         </div>
     </div>
