--- a/_themes/tm3/css/events.css
+++ b/_themes/tm3/css/events.css
@@ -104,7 +104,7 @@
     .map #performance-list .h-event .p-name
     {
         font-size: 90%;
-        height: 48px;
+        max-height: 48px;
         margin: 0;
         min-height: 0;
         overflow: hidden;
