--- a/_themes/tm3/css/utilities.css
+++ b/_themes/tm3/css/utilities.css
@@ -4,6 +4,7 @@
 .display-none { display: none !important; }
 .expand { display: block; width: 100%; }
 .js .fadein, .js .hero .quote.fadein { opacity: 1; }
+.js .fadeout { opacity: 0; }
 .fixed { bottom: 0; left: 0; position: fixed; right: 0; top: 0; }
 .grid, .grid-pad { position: relative; }
 .grid-pad { padding: 30px; }
